Bug 348126 - Very poor use of space in display settings window
Summary: Very poor use of space in display settings window
Status: RESOLVED FIXED
Alias: None
Product: KScreen
Classification: Plasma
Component: kcm (other bugs)
Version First Reported In: 5.3.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Nate Graham
URL:
Keywords:
: 398156 398712 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-05-23 02:24 UTC by John Lindgren
Modified: 2019-09-17 19:22 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.0
Sentry Crash Report:


Attachments
Screenshot (default window size) (40.11 KB, image/png)
2015-05-23 02:26 UTC, John Lindgren
Details
Screenshot (maximized) (61.73 KB, image/png)
2015-05-23 02:27 UTC, John Lindgren
Details
Screenshot (XFCE, for comparison) (55.09 KB, image/png)
2015-05-23 02:27 UTC, John Lindgren
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John Lindgren 2015-05-23 02:24:55 UTC
The layout of the display settings window makes very poor use of the available space.  At the default size, one has to first click on a display (for example, VGA1) and then scroll to find the "Enabled" checkbox.  Even when maximized (1366x768), the window's content does not all fit on the screen without a scrollbar.  Yet there are huge areas of blank wasted space in the window.  Compare to XFCE's display settings window (screenshot attached), which fits all off the same settings in a much smaller space.

Reproducible: Always

Steps to Reproduce:
1. Open the display settings window.
2. Click on a display to configure it.

Actual Results:  
The "Enabled" checkbox is hard to find since it's hidden offscreen; you have to notice the scrollbar and scroll down to find the checkbox.

Expected Results:  
After clicking on a display, there should be a clearly-visible (not offscreen!) way to turn it on or off.
Comment 1 John Lindgren 2015-05-23 02:26:45 UTC
Created attachment 92789 [details]
Screenshot (default window size)
Comment 2 John Lindgren 2015-05-23 02:27:03 UTC
Created attachment 92790 [details]
Screenshot (maximized)
Comment 3 John Lindgren 2015-05-23 02:27:23 UTC
Created attachment 92791 [details]
Screenshot (XFCE, for comparison)
Comment 4 András Manţia 2018-12-19 18:28:43 UTC
With Plasma 5.14 is better, but not good enough, especially inside the System Settings. Outside it (kcmshell5 kcm_screen) it looks quite OK.
Comment 5 Nate Graham 2019-09-09 01:50:26 UTC
*** Bug 398712 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2019-09-09 01:50:28 UTC
*** Bug 398156 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2019-09-09 02:15:25 UTC
Now that the KCM has been re-done to be entirely QML for Plasma 5.17, this has gotten much better, but is not fully 100% fixed. Should be easy to finish it all up for the release. Will work on that.
Comment 8 Nate Graham 2019-09-09 14:22:22 UTC
Patch: https://phabricator.kde.org/D23798
Comment 9 Nate Graham 2019-09-17 19:22:39 UTC
Git commit d0dc9a7a1c1ef92865806e94a9da47240c825162 by Nate Graham.
Committed on 17/09/2019 at 19:22.
Pushed by ngraham into branch 'master'.

Polish Displays KCM UI

Summary:
This patch improves and polishes the new KScreen KCM's UI in a variety of ways. A picture
says a thousand words, so look at the pictures. :)
FIXED-IN: 5.17.0

Test Plan:
Due to an unrelated bug, my second screen isn't showing up in the visualization, so please excuse the fact that only one appears there in these screenshots:

{F7369458}

{F7369494}

All functionality that was working before is still working now.

Reviewers: romangg, #vdg, #kwin, GB_2

Reviewed By: romangg, #vdg, #kwin, GB_2

Subscribers: filipf, ndavis, GB_2, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D23798

M  +1    -1    kcm/kcm.cpp
M  +1    -1    kcm/kcm_kscreen.desktop
M  +3    -1    kcm/output_model.cpp
M  +1    -0    kcm/package/contents/ui/Output.qml
M  +2    -2    kcm/package/contents/ui/OutputIdentifier.qml
M  +17   -9    kcm/package/contents/ui/OutputPanel.qml
M  +7    -26   kcm/package/contents/ui/Panel.qml
M  +12   -4    kcm/package/contents/ui/Screen.qml
M  +7    -3    kcm/package/contents/ui/main.qml

https://commits.kde.org/kscreen/d0dc9a7a1c1ef92865806e94a9da47240c825162